--- a/wp-content/themes/roots-master/bower.json
+++ b/wp-content/themes/roots-master/bower.json
@@ -17,6 +17,7 @@
     "jquery": "1.11.1",
     "bootstrap": "3.2.0",
     "respond": "1.4.2",
-    "imagesloaded": "~3.1.8"
+    "imagesloaded": "~3.1.8",
+    "jquery-mobile-bower": "~1.4.5"
   }
 }
